--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "A hello world built in Python also making use of pydantic to conn
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "cryptography>=44.0.2",
     "pymysql>=1.1.1",
     "sqlalchemy>=2.0.38",
 ]
